<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/emailPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/emailPrompt"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailHint"
        android:padding="10dp" />

    <TextView
        android:id="@+id/heightPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/heightPrompt"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/heightInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/heightHintDialog"
        android:padding="10dp" />

    <TextView
        android:id="@+id/heightExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heightExplanation"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="13sp"
        android:textStyle="bold" />

</LinearLayout>