...
    <string name="emailPrompt">Please enter your preferred Gmail address</string>
    <string name="emailHint">Gmail address</string>
    <string name="invalidEmail">Invalid email. Please try again</string>

    // Height dialog
    <string name="heightHintDialog">Height</string>
    <string name="heightButton">OK</string>
    <string name="heightPrompt">Please enter your height in inches (e.g. 60):</string>
    <string name="heightExplanation">
        Your height will be used to calculate the distance you travel from your steps. Thank you
        for choosing Walk Walk Revolution.
    </string>
    <string name="invalidHeightToast">Invalid height. Please try again</string>
...
